--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -26,7 +26,7 @@
             margin-top: 16px;
         }
 
-        p {
+        span {
             font-size: 24px;
             line-height: 32px;
             margin-top: 16px;
