--- a/src/pages/NewRoom/styles.scss
+++ b/src/pages/NewRoom/styles.scss
@@ -25,7 +25,7 @@
             margin-top: 16px;
         }
 
-        p {
+        span {
             font-size: 24px;
             line-height: 32px;
             margin-top: 16px;
